Added a second paragraph to the index.html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <p>The following heading should say "Goodbye":</p>
   <h1 id="pageHeading">Hello!</h1>
   <p>Some changes</p>
+  <p>Additional changes I have made!</p>
 </body>
 
 </html>
